# DeepLearningForFunctionalEquations

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  train_functional_eq.py
